--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,40 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+.glyph-button {
+    -webkit-appearance: none;
+    outline: none;
+    border: 0;
+    background: transparent;
+}
+
+a {
+  color: #23527c;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+body {
+  padding-top: 60px;
+}
+$navbar-blue: #337ab7;
+$white: #FFF;
+
+.panel-heading {
+  background-color: $navbar-blue;
+  font: bold;
+  font-size: 16px;
+  color: $white;
+  &:hover {
+    background-color: darken($navbar-blue, 10);
+  }
+}
+.testclass {
+  background-color: $navbar-blue;
+  &:hover {
+    background-color: lighten($navbar-blue, 20);
+  }
+}
