--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Expense list Tracker</a>
+            <h6 class="navbar-brand">Expense list Tracker</h4>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
