--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
       <div class="container-fluid">
         <%= render 'layouts/navbar' %>
         <%= yield %>
+        <%= debug(params) %>
       </div>
     </body>
 </html>
