Add basic error message display, to fix: german locale in en.yml, dunno how to configure properly yet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,3 +63,12 @@ $white: #FFF;
   border-collapse: separate;
   border-spacing: 0 20px;
 }
+
+.container {
+  padding-left: 0px;
+}
+
+.panel-group .panel {
+    margin-bottom: 15px;
+    border-radius: 4px;
+}
