--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -1,37 +1,39 @@
 <div class="container">
-    <div class="panel-group">
-        <% if @expense_lists.any? %>
-        <% @expense_lists.each do |expense_list| %>
-        <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="panel panel-default">
-                <%= link_to expense_list_path(expense_list) do %>
-                <div class="panel-heading">
-                    <%= expense_list.name %>
-                </div>
-                <% end %>
-                <div class="panel-body">
-                    <p class="text-muted">
-                        <%= expense_list.description %>
-                    </p>
-                </div>
-                <div class="panel-footer">
-                    <b><%= "#{total_expenses_in_expense_list expense_list}€" %></v>
-                    <small><%= "seit Erstellung (#{expense_list.created_at.to_date})" %></small>
+    <div class="col-lg-12" id="expense-list-panel-group">
+        <div class="panel-group">
+            <% if @expense_lists.any? %>
+            <% @expense_lists.each do |expense_list| %>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="panel panel-default">
+                    <%= link_to expense_list_path(expense_list) do %>
+                    <div class="panel-heading">
+                        <%= expense_list.name %>
+                    </div>
+                    <% end %>
+                    <div class="panel-body">
+                        <p class="text-muted">
+                            <%= expense_list.description %>
+                        </p>
+                    </div>
+                    <div class="panel-footer">
+                        <b><%= "#{total_expenses_in_expense_list expense_list}€" %></v>
+                        <small><%= "seit Erstellung (#{expense_list.created_at.to_date})" %></small>
+                    </div>
                 </div>
             </div>
+
+            <% end %>
+        <% else %>
+            <div class="container">
+                <p>
+                    Es gibt noch keine Liste...
+                </p>
+            </div>
+            <% end %>
         </div>
 
-        <% end %>
-    <% else %>
-        <div class="container">
-            <p>
-                Es gibt noch keine Liste...
-            </p>
-        </div>
-        <% end %>
     </div>
-
+    <p>
+        <%= link_to "Neue Liste anlegen", new_expense_list_path, {class: 'btn btn-default btn-primary btn-success'} %>
+    </p>
 </div>
-<p>
-    <%= link_to "Neue Liste anlegen", new_expense_list_path, {class: 'btn btn-default btn-primary btn-xs'} %>
-</p>
