--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-    <nav class="navbar navbar-default">
+<nav class="navbar navbar-dark navbar-inverse navbar-fixed-top">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <h6 class="navbar-brand">Expense list Tracker</h4>
+            <p class="navbar-brand">Expense list Tracker</p>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
