--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
         <%= render 'layouts/navbar' %>
         <%= render partial: 'shared/error_messages' %>
         <%= yield %>
+        <%= debug(params) %>
       </div>
     </body>
 </html>
