--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,20 +1,24 @@
+
 <%= form_for([@expense_list, @expense]) do |f| %>
   <fieldset class="form-group">
       <div class="col-xs-4">
           <%= f.label 'Wo warst du einkaufen?' %>
           <%= f.text_field :where, {class: 'form-control', placeholder: 'e.g. Lidl'}%>
+          <div class="form_input_error"><%= error_for_form(@expense, "where") %></div>
       </div>
   </fieldset>
   <fieldset class="form-group">
       <div class="col-xs-4">
           <%= f.label 'Wieviel € hast du ausgegeben?' %>
           <%= f.text_field :expenses_in_euro, {class: 'form-control', placeholder: '23,40'}%>
+          <div class="form_input_error"><%= error_for_form(@expense, "expenses_in_euro") %></div>
       </div>
   </fieldset>
   <fieldset class="form-group">
       <div class="col-xs-4">
           <%= f.label 'Wann warst du einkaufen?' %>
           <%= f.text_field :when, {class: 'form-control', placeholder: '23.04.1983'}%>
+          <div class="form_input_error"><%= error_for_form(@expense, "when") %></div>
       </div>
   </fieldset>
   <fieldset class="form-group">
@@ -25,5 +29,6 @@
   </fieldset>
   <div class="col-xs-4">
       <%= f.submit "Eintragen", class: "btn btn-primary" %>
+      <%= link_to "Zurück", @expense_list, class: "btn btn-primary" %>
   </div>
   <% end %>
