Add members to expense_list

--- a/app/views/expense_lists/index.html.erb
+++ b/app/views/expense_lists/index.html.erb
@@ -3,7 +3,7 @@
         <div class="panel-group">
             <% if @expense_lists.any? %>
             <% @expense_lists.each do |expense_list| %>
-            <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="col-md-4 col-md-4 col-md-4">
                 <div class="panel panel-default">
                     <%= link_to expense_list_path(expense_list) do %>
                     <div class="panel-heading">
