Add basic login / logout feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
         <%= render 'layouts/navbar' %>
         <%= render partial: 'shared/flash_messages' %>
         <%= yield %>
-        <!-- <%= debug(params) %> -->
+        <%= debug(params) %>
       </div>
     </body>
 </html>
