--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,9 +13,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <%= link_to "Ausgabenlisten anzeigen", expense_lists_path %>
-                </li>
+                <li><%= link_to "Ausgabenlisten anzeigen", expense_lists_path %></li>
+                <li><%= link_to "Login", login_path %></li>
+                <li><%= link_to "Sign up", signup_path %></li>
             </ul>
         </div>
     </nav>
