Add user to expense

--- a/app/views/expense_lists/show.html.erb
+++ b/app/views/expense_lists/show.html.erb
@@ -41,7 +41,7 @@
             </td>
             <td><%= expense.when.strftime("%d.%m") %></td>
             <td><%= expense.where %></td>
-            <td></td>
+            <td><%= expense.user.name %></td>
             <td><%= "#{expense.expenses_in_euro}€" %></td>
             <td></td>
             <td><%= expense.comment %></td>
