--- a/app/views/expense_lists/_form.html.erb
+++ b/app/views/expense_lists/_form.html.erb
@@ -1,29 +1,42 @@
-<div class="container">
-  <%= form_for @expense_list do |f| %>
-    <fieldset class="form-group">
-        <div class="col-xs-4">
-            <%= f.label 'Name der Liste'%>
-            <%= f.text_field :name, {class: "form-control", placeholder: "e.g. Essenseinkäufe"} %>
-            <div class="form_input_error"><%= error_for_form(@expense_list, "name") %></div>
-        </div>
-    </fieldset>
-    <fieldset class="form-group">
-        <div class="col-xs-4">
-            <%= f.label "Beschreibung" %>
-            <%= f.text_area :description, {class: "form-control", placeholder: "Liste für Wocheneinkaufs-Ausgaben "} %>
-            <div class="form_input_error"><%= error_for_form(@expense_list, "description") %></div>
-        </div>
-    </fieldset>
-    <fieldset class="form-group">
-        <div class="col-xs-4">
-            <%= f.label "Monatliches Budget" %>
-            <%= f.text_field :budget_in_euro, {class: "form-control", placeholder: "optional"} %>
-            <div class="form_input_error"><%= error_for_form(@expense_list, "budget_in_euro") %></div>
-        </div>
-    </fieldset>
-    <div class="col-xs-4">
-        <%= f.submit "Übernehmen", class: "btn btn-primary btn-xs" %>
-        <%= link_to "Zurück", expense_lists_path, class: "btn btn-primary btn-xs" %>
+<%= form_for @expense_list do |f| %>
+  <fieldset class="form-group row #{"has-danger" if f.object.errors.include?(:name)}">
+    <div class="col-xs-3">
+      <%= f.text_field :name, {class: "form-control", placeholder: "e.g. Essenseinkäufe"} %>
     </div>
-    <% end  %>
-</div>
+    <div class="col-xs-3">
+      <span class="help-block">
+      <%= f.object.errors[:name].join(", ") %>
+      </span>
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group row #{"has-danger" if f.object.errors.include?(:description)}">
+    <div class="col-xs-3">
+      <%= f.text_area :description, {class: "form-control", placeholder: "Liste für Wocheneinkaufs-Ausgaben "} %>
+    </div>
+    <div class="col-xs-3">
+      <span class="help-block">
+      <%= f.object.errors[:description].join(", ") %>
+      </span>
+    </div>
+  </fieldset>
+
+  <fieldset class="form-group row #{"has-danger" if f.object.errors.include?(:budget_in_euro)}">
+    <div class="col-xs-3">
+      <%= f.text_field :budget_in_euro, {class: "form-control", placeholder: "optional"} %>
+    </div>
+    <div class="col-xs-3">
+      <span class="help-block">
+      <%= f.object.errors[:budget_in_euro].join(", ") %>
+      </span>
+    </div>
+  </fieldset>
+  <div class="row">
+    <div class="col-xs-2">
+      <%= f.submit "Übernehmen", class: "btn btn-primary btn-success" %>
+    </div>
+    <div class="col-xs-1">
+      <%= link_to "Zurück", expense_lists_path, class: "btn btn-primary btn-danger" %>
+    </div>
+  </div>
+<% end  %>
