--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,45 +1,68 @@
 <%= form_for([@expense_list, @expense]) do |f| %>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Datum' %>
-          <%= f.text_field :where, {class: 'form-control', placeholder: 'e.g. Lidl'}%>
-          <div class="form_input_error"><%= error_for_form(@expense, "where") %></div>
-      </div>
-  </fieldset>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Wieviel € wurden ausgegeben?' %>
-          <%= f.text_field :expenses_in_euro, {class: 'form-control', placeholder: '23,40'}%>
-          <div class="form_input_error"><%= error_for_form(@expense, "expenses_in_euro") %></div>
-      </div>
-  </fieldset>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Wann wurde eingekauft?' %>
-          <%= f.text_field :when, {class: 'form-control', placeholder: '23.04.1983'}%>
-          <div class="form_input_error"><%= error_for_form(@expense, "when") %></div>
-      </div>
-  </fieldset>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Kommentar (optional)' %>
-          <%= f.text_area :comment, {class: 'form-control', placeholder: 'Hab viel Kaffee gekauft (teuer!)'}%>
-      </div>
-  </fieldset>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Wer hat eingekauft:' %>
-          <%= f.collection_select :user_id, User.all, :id, :name %>
-      </div>
-  </fieldset>
-  <fieldset class="form-group">
-      <div class="col-xs-4">
-          <%= f.label 'Welche Kasse?' %>
-          <%= f.collection_select :cash_desk, Expense::CASH_DESK, :to_s, :humanize %>
-      </div>
-  </fieldset>
-  <div class="col-xs-4">
-      <%= f.submit "Eintragen", class: "btn btn-primary" %>
-      <%= link_to "Zurück", @expense_list, class: "btn btn-primary" %>
+<fieldset class="form-group row #{"has-error" if f.object.errors.include?(:where)}">
+  <div class="col-xs-3">
+    <%= f.text_field :where, {class: "form-control", placeholder: "Supermarkt"} %>
   </div>
-  <% end %>
+  <div class="col-xs-3">
+    <span class="help-block">
+      <%= f.object.errors[:where].join(", ") %>
+    </span>
+  </div>
+</fieldset>
+
+<fieldset class="form-group row #{"has-error" if f.object.errors.include?(:expenses_in_euro)}">
+  <div class="col-xs-3">
+    <%= f.text_field :expenses_in_euro, {class: "form-control", placeholder: "23.45"} %>
+  </div>
+  <div class="col-xs-3">
+    <span class="help-block">
+      <%= f.object.errors[:expenses_in_euro].join(", ") %>
+    </span>
+  </div>
+</fieldset>
+
+<fieldset class="form-group row #{"has-error" if f.object.errors.include?(:when)}">
+  <div class="col-xs-3">
+    <%= f.text_field :when, {class: "form-control", placeholder: "23.04.2016"} %>
+  </div>
+  <div class="col-xs-3">
+    <span class="help-block">
+      <%= f.object.errors[:when].join(", ") %>
+    </span>
+  </div>
+</fieldset>
+
+<fieldset class="form-group row #{"has-error" if f.object.errors.include?(:comment)}">
+  <div class="col-xs-3">
+    <%= f.text_field :comment, {class: "form-control", placeholder: "Kommentar"} %>
+  </div>
+  <div class="col-xs-3">
+    <span class="help-block">
+      <%= f.object.errors[:comment].join(", ") %>
+    </span>
+  </div>
+</fieldset>
+
+<fieldset class="form-group">
+  <div class="col-xs-3">
+    <%= f.label 'Wer hat eingekauft:' %>
+    <%= f.collection_select :user_id, User.all, :id, :name %>
+  </div>
+</fieldset>
+
+<fieldset class="form-group">
+  <div class="col-xs-3">
+    <%= f.label 'Welche Kasse?' %>
+    <%= f.collection_select :cash_desk, Expense::CASH_DESK, :to_s, :humanize %>
+  </div>
+</fieldset>
+
+<div class="row">
+  <div class="col-xs-2">
+    <%= f.submit "Übernehmen", class: "btn btn-primary btn-success" %>
+  </div>
+  <div class="col-xs-1">
+    <%= link_to "Zurück", expense_lists_path, class: "btn btn-primary btn-danger" %>
+  </div>
+</div>
+<% end %>
