--- a/app/views/expense_lists/_form.html.erb
+++ b/app/views/expense_lists/_form.html.erb
@@ -33,10 +33,10 @@
   </fieldset>
   <div class="row">
     <div class="col-xs-2">
-      <%= f.submit "Übernehmen", class: "btn btn-primary btn-success" %>
+      <%= f.submit "Submit", class: "btn btn-primary btn-success" %>
     </div>
     <div class="col-xs-1">
-      <%= link_to "Zurück", expense_lists_path, class: "btn btn-primary btn-danger" %>
+      <%= link_to "Back", expense_lists_path, class: "btn btn-primary btn-danger" %>
     </div>
   </div>
 <% end  %>
