--- a/app/views/expense_lists/show.html.erb
+++ b/app/views/expense_lists/show.html.erb
@@ -1,61 +1,63 @@
 <div class="container">
-    <h4><%= @expense_list.name %></h4>
+  <h4><%= @expense_list.name %></h4>
+  <p>
     <small class="text-muted"><%= @expense_list.description %></small>
+  </p>
 </div>
 
 <div class="container">
-    <!--  YEAR-->
-    <% expenses_in_year(@expense_list.expenses).each do |year, expenses| %>
-    <h4><%= year %></h4>
-    <table class="table table-condensed table-hover">
-        <thead>
-            <th class="hidden-xs-up"></th>
-            <th class="col-md-1">Datum</th>
-            <th class="col-md-1">Wo</th>
-            <th class="col-md-1">Wer</th>
-            <th class="col-md-1">Wieviel</th>
-            <th class="col-md-1">Kasse</th>
-            <th>Kommentar</th>
-        </thead>
-        <tbody>
-            <!--  MONTH -->
-            <% expenses_in_months(expenses).each do |month, expenses| %>
-            <tr>
-                <th class="month-row"></th>
-                <th colspan="6" class="month-row"><%= month %></th>
-            </tr>
-            <!--  EXPENSES IN RESPECTIVE MONTH-->
-            <% expenses.each do |expense| %>
-            <tr>
-                <td class="col-md-1">
-                    <%= link_to '', edit_expense_list_expense_path(@expense_list, expense), {class: 'btn btn-default btn-xs glyphicon glyphicon-pencil glyph-button'} %>
-                    <%= link_to '', expense_list_expense_path(@expense_list, expense), {method: "delete", data: { confirm: "Bist du dir sicher, dass du den Eintrag löschen willst?" }, class: 'btn btn-default btn-xs glyphicon glyphicon-trash glyph-button'} %>
-                </div>
-            </td>
-            <td><%= expense.when.strftime("%d.%m") %></td>
-            <td><%= expense.where %></td>
-            <td><%= expense.user && expense.user.name || "???" %></td>
-            <td><%= "#{expense.expenses_in_euro}€" %></td>
-            <td><%= expense.cash_desk %></td>
-            <td><%= expense.comment %></td>
-        </tr>
-        <% end %>
-        <tr>
-            <td class="monthly-totals-row" colspan=4></td>
-            <td class="monthly-totals-row"><b><%= sum_expenses_collection expenses %></td></b>
-            <td class="monthly-totals-row" colspan="2"></td>
-        </tr>
-        <tr>
-            <td colspan="7" class="spacer-row"></td>
-        </tr>
-        <% end %>
-    </tbody>
+  <!--  YEAR-->
+  <% expenses_in_year(@expense_list.expenses).each do |year, expenses| %>
+  <h4><%= year %></h4>
+  <table class="table table-condensed table-hover">
+    <thead>
+      <th class="hidden-xs-up"></th>
+      <th class="col-md-1">Date</th>
+      <th class="col-md-1">Where</th>
+      <th class="col-md-1">Who</th>
+      <th class="col-md-1">How much</th>
+      <th class="col-md-1">Cash pool</th>
+      <th>Kommentar</th>
+    </thead>
+    <tbody>
+      <!--  MONTH -->
+      <% expenses_in_months(expenses).each do |month, expenses| %>
+      <tr>
+        <th class="month-row"></th>
+        <th colspan="6" class="month-row"><%= month %></th>
+      </tr>
+      <!--  EXPENSES IN RESPECTIVE MONTH-->
+      <% expenses.each do |expense| %>
+      <tr>
+        <td class="col-md-1">
+          <%= link_to '', edit_expense_list_expense_path(@expense_list, expense), {class: 'btn btn-default btn-xs glyphicon glyphicon-pencil glyph-button'} %>
+          <%= link_to '', expense_list_expense_path(@expense_list, expense), {method: "delete", data: { confirm: "Bist du dir sicher, dass du den Eintrag löschen willst?" }, class: 'btn btn-default btn-xs glyphicon glyphicon-trash glyph-button'} %>
+        </div>
+      </td>
+      <td><%= expense.when.strftime("%d.%m") %></td>
+      <td><%= expense.where %></td>
+      <td><%= expense.user && expense.user.name || "???" %></td>
+      <td><%= "#{expense.expenses_in_euro}€" %></td>
+      <td><%= expense.cash_desk %></td>
+      <td><%= expense.comment %></td>
+    </tr>
+    <% end %>
+    <tr>
+      <td class="monthly-totals-row" colspan=4></td>
+      <td class="monthly-totals-row"><b><%= sum_expenses_collection expenses %></td></b>
+      <td class="monthly-totals-row" colspan="2"></td>
+    </tr>
+    <tr>
+      <td colspan="7" class="spacer-row"></td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
 <% end  %>
 <p>
-    <%= link_to "Ausgabe hinzufügen", new_expense_list_expense_path(@expense_list), {class: "btn btn-success btn-xs"} %>
-    <%= link_to "Liste ändern", edit_expense_list_path(@expense_list), {class: "btn btn-warning btn-xs"} %>
-    <%= link_to "Liste löschen", expense_list_path(@expense_list), {method: "delete", data: { confirm: "Bist du dir sicher, dass du die Liste löschen willst?" }, class: 'btn btn-danger btn-xs'} %>
-    <%= link_to 'Zurück', expense_lists_path, {class: "btn btn-primary btn-xs"} %>
+  <%= link_to "Add expense", new_expense_list_expense_path(@expense_list), {class: "btn btn-success btn-xs"} %>
+  <%= link_to "Modify list", edit_expense_list_path(@expense_list), {class: "btn btn-warning btn-xs"} %>
+  <%= link_to "Delete list", expense_list_path(@expense_list), {method: "delete", data: { confirm: "Bist du dir sicher, dass du die Liste löschen willst?" }, class: 'btn btn-danger btn-xs'} %>
+  <%= link_to 'Back', expense_lists_path, {class: "btn btn-primary btn-xs"} %>
 </p>
 </div>
