--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,26 @@
 <nav class="navbar navbar-default navbar-blue navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-                <span class="sr-only navbar-brand">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <p class="navbar-brand">Expense list Tracker</p>
-        </div>
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+        <span class="sr-only navbar-brand">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <p class="navbar-brand">Expense list Tracker</p>
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <% if session[:user_id] %>
-                    <li><%= link_to "Ausgabenlisten", expense_lists_path %></li>
-                    <li><%= link_to "User-Einstellungen", edit_user_path(session[:user_id]) %></li>
-                    <li><%= link_to "Ausloggen", logout_path %></li>
-                <% else  %>
-                    <li><%= link_to "Einloggen", login_path %></li>
-                <% end %>
-            </ul>
-        </div>
-    </nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <% if session[:user_id] %>
+        <li><%= link_to "Expense lists", expense_lists_path %></li>
+        <li><%= link_to "User settings", edit_user_path(session[:user_id]) %></li>
+        <li><%= link_to "Log out", logout_path %></li>
+        <% else  %>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 </div>
