--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@ a {
   }
 }
 body {
-  padding-top: 60px;
+  padding-top: 5px;
 }
 $navbar-blue: #337ab7;
 $navbar-gray: #e7e7e7;
@@ -90,4 +90,8 @@ $white: #FFF;
 .form_input_error {
   color: #b41b2d;
   font-style: italic;
+}
+
+.navbar {
+  padding-right: 15px;
 }
