--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,31 @@
-<nav class="navbar navbar-default navbar-blue navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-        <span class="sr-only navbar-brand">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <p class="navbar-brand">Expense list Tracker</p>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <% if session[:user_id] %>
-        <li><%= link_to "Expense lists", expense_lists_path %></li>
-        <li><%= link_to "User settings", edit_user_path(session[:user_id]) %></li>
-        <li><%= link_to "Log out", logout_path %></li>
-        <% else  %>
-        <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
-</div>
+<nav class='navbar navbar-default' role='navigation'>
+  <div class='navbar-header'>
+    <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
+      <span class='icon-bar'></span>
+      <span class='icon-bar'></span>
+      <span class='icon-bar'></span>
+    </button>
+  </div>
+  <%= link_to 'ExpenseList Tracker', '', class: 'navbar-brand' %>
+    <ul class='nav navbar-nav navbar-left'>
+    </ul>
+    <ul class='nav navbar-nav navbar-right'>
+      <% if session[:user_id] %>
+      <li class='nav-item'>
+        <%= link_to 'Expense lists', expense_lists_path %>
+      </li>
+      <li class='nav-item dropdown'>
+        <a class='nav-link dropdown-toggle btn btn-default btn-xs glyphicon glyphicon-user glyph-button' data-toggle='dropdown' href='#' role='button' aria-haspopup='true' aria-expanded='false'></a>
+        <div class='dropdown-menu'>
+          <%= link_to 'User settings', edit_user_path(session[:user_id]), class: 'btn dropdown-item' %><br>
+          <%= link_to 'Logout', logout_path, class: 'btn dropdown-item' %>
+        </div>
+      </li>
+      <% else %>
+      <li class='nav-item active'>
+        <%= link_to 'Login', login_path %>
+      </li>
+      <% end %>
+    </ul>
+  </div>
+</nav>
