Make Mailer functional in development using figaro for email credentials

--- a/app/views/notifier/expense_list_deleted.erb
+++ b/app/views/notifier/expense_list_deleted.erb
@@ -1,1 +1,1 @@
-Hinweis: die Ausgabenliste '<%= @expense_list.name %>' wurde gelöscht.
+Hinweis: die Ausgabenliste '<%= @expense_list_name %>' wurde gelöscht.
