--- a/app/views/notifier/new_expense_list_created.erb
+++ b/app/views/notifier/new_expense_list_created.erb
@@ -2,4 +2,8 @@ Hallo,
 
 eine neue Ausgabenliste wurde angelegt:
 
-Test
+<ul>
+  <li>Name: <%= @expense_list.name %></li>
+  <li>Budget: <%= @expense_list.budget_in_euro %>€</li>
+  <li>Beschreibung: <%= @expense_list.description %></li>
+</ul>
