Further Layout improvements and expense_list index cleanup (-> partials)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,3 +100,14 @@ $white: #FFF;
 .panel-footer {
   font-style: italic;
 }
+
+$table_background: rgb(246, 218, 218);
+
+.current-month-placeholder {
+  // border: 2px dashed rgb(246, 218, 218);
+  background-color: lighten($table_background, 5);;
+}
+
+.table_placeholder {
+  padding: 5px;
+}
