--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,17 @@ $table_background: rgb(246, 218, 218);
 .table_placeholder {
   padding: 5px;
 }
+
+.container-fluid {
+    margin-right: 40px;
+    margin-left: 40px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.navbar {
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
