--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,8 +115,8 @@ $table_background: rgb(246, 218, 218);
 .container-fluid {
     margin-right: 40px;
     margin-left: 40px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .navbar {
